[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://assets/FreePixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/employee_card.gd" type="Script" id=3]
[ext_resource path="res://assets/traits/focused.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="Card" type="PanelContainer"]
margin_right = 234.0
margin_bottom = 90.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Split" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 227.0
margin_bottom = 83.0

[node name="VBoxContainer" type="VBoxContainer" parent="Split"]
margin_right = 64.0
margin_bottom = 76.0

[node name="PlayerIcon" type="TextureRect" parent="Split/VBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TraitIcon" type="TextureRect" parent="Split/VBoxContainer"]
visible = false
margin_top = 68.0
margin_right = 64.0
margin_bottom = 100.0
texture = ExtResource( 4 )

[node name="Name" type="Label" parent="Split/VBoxContainer/TraitIcon"]
visible = false
margin_left = 40.0
margin_top = 16.0
custom_fonts/font = SubResource( 2 )
text = "Trait Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="Split"]
margin_left = 68.0
margin_right = 220.0
margin_bottom = 76.0

[node name="Name" type="Label" parent="Split/Info"]
margin_right = 152.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Employee Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Age" type="Label" parent="Split/Info"]
margin_top = 20.0
margin_right = 152.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 1 )
text = "Employee Age"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Experience" type="Label" parent="Split/Info"]
margin_top = 40.0
margin_right = 152.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Years of Experience"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salary" type="Label" parent="Split/Info"]
margin_top = 60.0
margin_right = 152.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 1 )
text = "Monthly Salary"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Split/VBoxContainer/TraitIcon" to="." method="_on_TraitIcon_mouse_entered"]
[connection signal="mouse_exited" from="Split/VBoxContainer/TraitIcon" to="." method="_on_TraitIcon_mouse_exited"]
